[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xpanther"
version = "1.0.2"
authors = [
  { name="Flori Batusha", email="floribatusha0@gmail.com" },
]
description = "Find unique xpath of any html/xml element"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/riflosnake/XPanther"
