[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xpanther"
version = "1.1.4"
authors = [
  { name="Flori Batusha", email="floribatusha0@gmail.com" },
]
description = "Find Unique Xpath of any HTML/XML element"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "bs4 >= 0.0.1",
    "selenium >= 4.9.0",
    "requests >= 2.31.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Check Github" = "https://github.com/riflosnake/XPanther"